Wed Aug  2 20:19:04 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_other_tests.lst:
          Added new test (TAO/orbsvcs/tests/ImplRepo/Bug_2604_Regression).

Wed Aug  2 18:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Connector.cpp:
          Const improvements

        * ace/Caching_Utility_T.h:
        * ace/config-lite.h:
        * ace/Event_Handler.h:
        * ace/Framework_Component.h:
        * ace/Lock.h:
        * ace/Lock_Adapter_T.h:
        * ace/Null_Mutex.h:
        * ace/Object_Manager.h:
        * ace/Object_Manager_Base.h:
        * ace/Proactor.cpp:
        * ace/Process_Manager.h:
        * ace/Semaphore.h:
        * ace/Thread_Exit.h:
          Doxygen improvements

Wed Aug  2 15:50:48 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * bin/tao_other_tests.lst:

          Schedule bugzilla #2615 regression test.

Wed Aug  2 14:55:45 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * ACE-INSTALL.html:

          Updated the location of the MPC documentation.  It was moved from
          the MPC root directory to a docs directory.

        * bin/ChangeLogEditor/CVSFileLocator.pm:
        * bin/ChangeLogEditor/ChangeLogEdit.pm:
        * bin/ChangeLogEditor/ChangeLogEntry.pm:
        * bin/ChangeLogEditor/FileLocator.pm:
        * bin/ChangeLogEditor/SVNFileLocator.pm:
        * bin/cle.pl:

          Added better support for subversion and it now reports errors from
          cvs/svn.

        * bin/MakeProjectCreator/README:

          Updated to provide information on anonymously checking out MPC
          using Subversion.

        * bin/make_release:

          I added "-type gnuace" to the options where the default project
          type was assumed.  Eventually, MPC will not have a default project
          type.

Wed Aug  2 13:47:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/ACE-development-process.html: